--- a/elasticsearch/Cargo.toml
+++ b/elasticsearch/Cargo.toml
@@ -19,6 +19,9 @@ url = "^2.1"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 serde_with = "~1"
+surf = { git = "https://github.com/http-rs/surf.git", rev = "8368e88f" } # contains http-client crate separation work
+http-client = "1.1.1"
+http = "0.1.0"
 
 [dev-dependencies]
 failure = "0.1.5"
