--- a/elasticsearch/Cargo.toml
+++ b/elasticsearch/Cargo.toml
@@ -19,7 +19,7 @@ url = "^2.1"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 serde_with = "~1"
-surf = { git = "https://github.com/http-rs/surf.git", rev = "8368e88f" } # contains http-client crate separation work
+surf = "2.0.0-alpha.0"
 http-client = "1.1.1"
 http = "0.1.0"
 
