--- a/elasticsearch/Cargo.toml
+++ b/elasticsearch/Cargo.toml
@@ -19,7 +19,7 @@ url = "^2.1"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 serde_with = "~1"
-surf = "2.0.0-alpha.0"
+surf = { version = "2.0.0-alpha.0", default-features = false }
 http-client = "1.1.1"
 http = "0.1.0"
 
